projects/compiler/test/typechecker/match/error_duplicate_Enum_variant.out
Error at %FILE_NAME%:7:3
Duplicate match case
  |    Color.Red => 3
       ^
